@@ -26,15 +26,15 @@
 #include <glib.h>
 
 extern const struct archive_plugin bz2_plugin;
-extern const struct archive_plugin zip_plugin;
+extern const struct archive_plugin zzip_archive_plugin;
 extern const struct archive_plugin iso_plugin;
 
 static const struct archive_plugin *const archive_plugins[] = {
 #ifdef HAVE_BZ2
 	&bz2_plugin,
 #endif
-#ifdef HAVE_ZIP
-	&zip_plugin,
+#ifdef HAVE_ZZIP
+	&zzip_archive_plugin,
 #endif
 #ifdef HAVE_ISO
 	&iso_plugin,
